--- a/templates/accounts/userManage.html
+++ b/templates/accounts/userManage.html
@@ -20,8 +20,14 @@
             <li class="page-item"><a class="page-link" href="?page={{ page_obj.previous_page_number }}">이전</a>
             </li>
             {% endif %}
-            {% for page_num in page_obj.page_range %}
-            <li class="page-item"><a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a></li>
+            {% for page_num in page_obj.paginator.page_range %}
+                {% if page_obj.number == page_num %}
+                <li class="page-item active">
+                {% else %}
+                <li class="page-item">
+                {% endif %}
+                    <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                </li>
             {% endfor %}
             {% if page_obj.has_next %}
             <li class="page-item"><a class="page-link" href="?page={{ page_obj.next_page_number }}">다음</a></li>
