feat: 유저목록 되돌아가기 버튼 추가

--- a/templates/accounts/userInfo.html
+++ b/templates/accounts/userInfo.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 <div class="container py-4">
+    <a class="btn btn-secondary mb-2" href="javascript:history.go(-1)">목록으로</a>
     <div class="card">
         <div class="card-body">
             <div class="d-flex w-100 justify-content-between">
