--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -22,7 +22,7 @@
             <div class="mb-md-5 mt-md-4 pb-5">
               <form method="post" class="form">
                 {% csrf_token %}
-                <h2 class="fw-bold mb-2 text-uppercase">중견연구</h2>
+                <h2 class="fw-bold mb-2 text-uppercase">조기진통감지 및 스트레스 완화</h2>
                 <p class="text-white-50 mb-5">로그인 정보를 입력해주세요!</p>
                 {% bootstrap_form form %}
                 <button class="btn btn-outline-light btn-lg px-5" type="submit">로그인하기</button>
