--- a/templates/survey/survey_complete.html
+++ b/templates/survey/survey_complete.html
@@ -11,6 +11,9 @@
               </svg>
             제출 완료
         </h1>
+        <figure class="text-center">
+            {{ result|safe }}
+        </figure>
         <p class="text-center fs-4">참여해 주셔서 감사합니다.</p>
     </div>
     <div class="row justify-content-center">
