--- a/templates/survey/survey_complete.html
+++ b/templates/survey/survey_complete.html
@@ -2,19 +2,19 @@
 {% block content %}
 
 <div class="container py-4">
-    <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+    <div class="p-5 mb-2 bg-body-tertiary rounded-3">
         
-        <h1 class="text-center display-5 fw-bold">
-            <svg xmlns="http://www.w3.org/2000/svg" width="52" height="52" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
+        <h1 class="text-center text-muted mb-5 fs-4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="29" height="29" fill="currentColor" class="bi bi-check-circle" viewBox="0 0 16 16">
                 <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16"/>
                 <path d="M10.97 4.97a.235.235 0 0 0-.02.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-1.071-1.05"/>
               </svg>
             제출 완료
         </h1>
-        <figure class="text-center">
+        <figure class="text-center mb-5">
             {{ result|safe }}
         </figure>
-        <p class="text-center fs-4">참여해 주셔서 감사합니다.</p>
+        <p class="text-center fs-10">참여해 주셔서 감사합니다.</p>
     </div>
     <div class="row justify-content-center">
             <a href="{% url 'home' %}" class="btn btn-primary btn-lg text-center" tabindex="-1" role="button">돌아가기</a>
