--- a/templates/survey/components/question.html
+++ b/templates/survey/components/question.html
@@ -52,10 +52,18 @@
 {# CheckBox 입력 #}
 {% elif survey_question.question.type_filed == 4 %}
     {% for answer in survey_question.question.answers.all %}
-        <div class="form-check form-check-inline">
-            <input class="form-check-input" type="checkbox" name="{{ survey_question.question.pk }}" id="{{ survey_question.question.pk }}" value="{{ answer.description }}">
-            <label class="form-check-label" for="{{ survey_question.question.pk }}">{{ answer.description }}</label>
+        <div class="form-check form-check-inline mb-3">
+            <input class="form-check-input" type="checkbox" name="{{ survey_question.question.pk }}_{{ answer.pk }}"   id="answer_{{ answer.pk }}" value="{{ answer.description }}"
+                {% if answer.is_other %}data-is-other="true"{% endif %}>
+            <label class="form-check-label" for="answer_{{ answer.pk }}">{{ answer.description }}</label>
         </div>
+        {# is_other가 True인 경우, 텍스트 입력 필드 표시 #}
+        {% if answer.is_other %}
+            <div id="other_text_div_{{ answer.pk }}" class="mb-3" style="display:none;">
+                <input type="text" class="form-control" name="other_text_{{ answer.pk }}" id="other_text_{{ answer.pk }}" placeholder="기타 내용을 입력하세요.">
+                 <label for="other_text_{{ answer.pk }}" class="form-label"></label>
+            </div>
+        {% endif %}
     {% endfor %}
 {# 넓은 텍스트 입력 #}
 {% elif survey_question.question.type_filed == 5 %}
@@ -79,6 +87,21 @@
                 // 선택한 답변이 is_other 옵션인지 확인하고, 해당 필드 표시
                 if (this.dataset.isOther === "true") {
                     document.getElementById('other_text_div_' + this.id.split('_')[1]).style.display = 'block';
+                }
+            });
+        });
+    });
+     document.addEventListener('DOMContentLoaded', function () {
+        // 체크박스 처리
+        document.querySelectorAll('input[type="checkbox"][data-is-other="true"]').forEach(function (checkbox) {
+            checkbox.addEventListener('change', function () {
+                const otherTextDiv = document.getElementById('other_text_div_' + this.id.split('_')[1]);
+
+                if (checkbox.checked) {
+                    otherTextDiv.style.display = 'block';
+                } else {
+                    otherTextDiv.style.display = 'none';
+                    otherTextDiv.querySelector('input').value = ''; // 체크 해제 시 입력 필드 초기화
                 }
             });
         });
