feat: 화웨이 계정 재인증 기능 추가

--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -12,12 +12,12 @@
                         <div class="row">
                             <form method="post">{% csrf_token %}
                                 {{ form.as_p }}
-                                <input type="submit" value="Update">
+                                <button type="submit" class="btn btn-light">변경하기</button>
                             </form>
                         </div>
                     </div>
                     <div class="card-footer text-muted text-center">
-                        데이터 동기화 상태: {{ current_user.huami.status }}
+                        비밀번호를 모를 시 관리자에게 문의해 주세요!
                     </div>
                 </div>
             </div>
