feat: 동기화 상태 관련 프로퍼티 추가

--- a/templates/accounts/myprofile.html
+++ b/templates/accounts/myprofile.html
@@ -27,7 +27,7 @@
                         </div>
                     </div>
                     <div class="card-footer text-muted text-center">
-                        데이터 동기화 상태: {{ current_user.huami.status }}
+                        데이터 동기화 상태: {{ current_user.huami.sync_status }}
                     </div>
                 </div>
             </div>
