--- a/templates/accounts/myprofile.html
+++ b/templates/accounts/myprofile.html
@@ -22,7 +22,7 @@
                                 <p><strong>연구 시작일:</strong> {{ current_user.huami.date_started }}</p>
                                 <p><strong>연구 종료일:</strong> {{ current_user.huami.date_ended }}</p>
                                 <a href="{% url 'accounts:user_password' %}" class="btn btn-secondary mt-3">비밀번호 재설정</a>
-                                <a href="{% url 'accounts:user_recertification' %}" class="btn btn-secondary mt-3">화웨이 계정 재설정</a>
+                                <a href="{% url 'accounts:user_recertification' %}" class="btn btn-secondary mt-3">화웨이(Zepp Life) 계정 재설정</a>
                             </div>
                         </div>
                     </div>
