--- a/templates/accounts/password_reset_request.html
+++ b/templates/accounts/password_reset_request.html
@@ -25,9 +25,8 @@
             <div class="mb-md-5 mt-md-4 pb-5">
               <form method="post" class="form">
                 <h2 class="fw-bold mb-2 text-uppercase">비밀번호 찾기</h2>
-                <p class="text-white-50 mb-5">회원가입 시 기입한 정보를 입력해주세요(이름에는 성 빼고 입력해주세요)</p>
+                <p class="text-white-50 mb-5">회원가입 시 기입한 정보를 입력해주세요</p>
                   {% csrf_token %}
-<!--                  {{ form.as_p }}-->
                   {% bootstrap_form form %}
                 <button class="btn btn-outline-light btn-lg px-5" type="submit">인증번호 받기</button>
               </form>
