feature: 사용자 명단 행 클릭 시 이동 기능 추가

--- a/templates/accounts/userManage.html
+++ b/templates/accounts/userManage.html
@@ -59,5 +59,13 @@
         </div>
         {% include "components/page_navigation.html" %}
     </div>
-
+    <script>
+    // 행 클릭 이벤트 추가
+    const tableRows = document.querySelectorAll('tbody tr[data-href]');
+    tableRows.forEach(row => {
+        row.addEventListener('click', () => {
+            window.location.href = row.getAttribute('data-href');
+        });
+    });
+    </script>
 {% endblock content %}
