feature: 데이터 동기화시마다 나이 수정 기능 추가

--- a/templates/accounts/userManage.html
+++ b/templates/accounts/userManage.html
@@ -35,7 +35,7 @@
                         {% endif %}
                         </td>
                         <td>{{ user.huami.email }}</td>
-                        <td>30</td>
+                        <td>{{ user.huami.age }}</td>
                         <td>{{ user.huami.get_research_status_display }}</td>
                         <td>{{ user.huami.join_date }}</td>
                         <td>{{ user.huami.end_date }}</td>
