--- a/templates/header.html
+++ b/templates/header.html
@@ -34,7 +34,7 @@
                     </li>
                     {% if user.is_superuser %}
                         <li>
-                            <a href="{% url 'accounts:userManage' %}?order_by=huami__name&direction=asc"
+                            <a href="{% url 'accounts:userManage' %}?page=1&order_by=huami__name&direction=asc"
                                class="nav-link text-white">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                      class="bi bi-people-fill" viewBox="0 0 16 16">
