--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -13,40 +13,44 @@
 {% load static %}
 
 {% block content %}
-<section class="h-100 h-custom gradient-custom-2">
-  <div class="container py-5 h-100">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-12">
-        <form method="post" class="form">
-          {% csrf_token %}
-          <div class="card card-registration card-registration-2" style="border-radius: 15px;">
-            <div class="card-body p-0">
-              <div class="row g-0">
-                <div class="col-lg-6">
-                  <div class="p-5">
-                    <h3 class="fw-normal mb-5" style="color: #140e3a;">회원가입 정보를 입력해주세요.</h3>
-                    {% bootstrap_form account_form %}
-                  </div>
+    <section class="h-100 h-custom gradient-custom-2">
+        <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12">
+                    <form method="post" class="form">
+                        {% csrf_token %}
+                        <div class="card card-registration card-registration-2" style="border-radius: 15px;">
+                            <div class="card-body p-0">
+                                <div class="row g-0">
+                                    <div class="col-lg-6">
+                                        <div class="p-5">
+                                            <h3 class="fw-normal mb-5" style="color: #140e3a;">회원가입 정보를 입력해주세요.</h3>
+                                            {% bootstrap_form account_form %}
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-6 bg-indigo">
+                                        <div class="p-5">
+                                            <p>지급받은 미밴드의 데이터 확인을 위해 Zepp Life 계정 정보가 필요합니다.</p>
+                                            {% bootstrap_form huami_account_form %}
+                                            <div class="form-check d-flex justify-content-start mb-4 pb-3">
+                                                <input class="form-check-input me-3" type="checkbox" value=""
+                                                       id="form2Example3c" required/>
+                                                <label class="form-check-label text-black" for="form2Example3">
+                                                    <a href="#!" class="text-black"><u>정보 이용 약관</u></a> 에 동의합니다.
+                                                </label>
+                                            </div>
+                                            <button type="submit" class="btn btn-light btn-lg"
+                                                    data-mdb-ripple-color="dark">회원가입
+                                            </button>
+                                            <a class="btn btn-secondary btn-lg" href="{% url 'home' %}" role="button">홈으로</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="col-lg-6 bg-indigo text-white">
-                  <div class="p-5">
-                    {% bootstrap_form huami_account_form %}
-                    <div class="form-check d-flex justify-content-start mb-4 pb-3">
-                      <input class="form-check-input me-3" type="checkbox" value="" id="form2Example3c" required />
-                      <label class="form-check-label text-black" for="form2Example3">
-                        <a href="#!" class="text-black"><u>정보 이용 약관</u></a> 에 동의합니다.
-                      </label>
-                    </div>
-                    <button type="submit" class="btn btn-light btn-lg" data-mdb-ripple-color="dark">회원가입</button>
-                    <a class="btn btn-secondary" href="{% url 'home' %}" role="button">홈으로</a>
-                  </div>
-                </div>
-              </div>
             </div>
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</section>
+        </div>
+    </section>
 {% endblock content %}
